package Item;

/**
 * Book1 (high school book) class extends from BaseItem
 */

public class Book1 extends EducationThing
{
    /**
     * constructor that initialize Book1 (high school book)
     */
    public Book1() { super("High School Book", "Item/book1.png"); }
}
