package Item;

/**
 * Book2 (Bachelor Book) class extends from BaseItem
 */

public class Book2 extends EducationThing
{
    /**
     * constructor that initialize Book2 (Bachelor book)
     */
    public Book2() { super("Bachelor Book", "Item/book2.png"); }
}
