package Item;
/**
 * Book3 (Master Book) class extends from BaseItem
 */

public class Book3 extends EducationThing {
    /**
     * constructor that initialize Book3 (master book)
     */

    public Book3() {
    super("Master Book", "Item/book3.png"); }
}
