package Item;
/**
 * Book4 (Doctorate Book) class extends from BaseItem
 */
public class Book4 extends EducationThing {

    /**
     * constructor that initialize Book4 (Doctorate book)
     */

    public Book4()
    { super("Doctorate Book", "Item/book4.png"); }
}
