package Item;

/**
 * this Class initialize Vehicle
 */
public class Vehicle extends BaseItem {

    /**
     * constructor that initialize Vehicle
     */

    public Vehicle() {
        super("Vehicle", "Item/Vehicle.png", Category.VEHICLE);
    }
}
