package Item;
/**
 * this Class initialize WheyProtein
 */
public class WheyProtein extends HealthThing {
    /**
     * constructor that initialize WheyProtein
     */
    public WheyProtein() {

        super("Whey Protein", "Item/WheyProtein.png");
    }
}
